# profession-c-plus-plus

./: .gitignore
25-4-prac/1doctor/: CMakeLists.txt
25-4-prac/2computer/: CMakeLists.txt
26-4-prac/: 1-audioplayer.cpp  2-phonebookv2.cpp  3-window.cpp
27-4-prac/1geom/: CMakeLists.txt
27-4-prac/2company/: CMakeLists.txt
27-4-prac/3elfs/: CMakeLists.txt
28-4-prac/1competitive/: CMakeLists.txt
28-4-prac/2station/: CMakeLists.txt
28-4-prac/3kitchen/: CMakeLists.txt
30-4-prac/1requests/: CMakeLists.txt
30-4-prac/1requests/src/: main.cpp
32-5-prac/2catalog/: CMakeLists.txt
32-5-prac/3proto/: CMakeLists.txt  enterprise.pb.cc  enterprise.pb.h  enterprise.proto
33-5-prac/3roaster/: CMakeLists.txt
33-5-prac/4avg/: CMakeLists.txt
35-6-prac/3filesystem/: CMakeLists.txt
35-6-prac/3filesystem/src/: main.cpp
36-4-prac/: CMakeLists.txt  main.cpp
37-4-prac/1calc/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  operationbutton.cpp  operationbutton.h  outputbox.cpp  outputbox.h  textbox.cpp  textbox.h
37-4-prac/2vplayer/: CMakeLists.txt  main.qml
37-4-prac/3remotecontroller/: CMakeLists.txt  channelnumbers.cpp  channelnumbers.h  main.cpp  mainwindow.cpp  mainwindow.h  screendata.cpp  screendata.h  splitbutton.cpp  splitbutton.h
38-5-prac/1redbtn/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  redbutton.cpp  redbutton.h
38-5-prac/2htmledit/: CMakeLists.txt  editwindow.cpp  editwindow.h  mainwindow.cpp  mainwindow.h  showwindow.cpp  showwindow.h
38-5-prac/3dynamicblur/: CMakeLists.txt  blurworker.cpp  blurworker.h  mainwindow.cpp  mainwindow.h
(+49 files in other folders)
